rust/src/openvasd/api_tests/snapshots/scan_victim_simple_auth_ssh_host_info.snap
---
source: src/openvasd/api_tests/mod.rs
expression: host_info
---
HostInfo(
  all: 1,
  excluded: 0,
  dead: 0,
  alive: 1,
  queued: 0,
  finished: 1,
  scanning: "[redacted]",
)
